* 2013-11-06 - thorben.betten@open-xchange.com

 - Fix for bug 29683: Create special "E-Mail attachments" InfoStore folder with private-only permissions

* 2013-11-06 - tobias.friedrich@open-xchange.com

 - Fix for bug 29609: Use cached sessions for consecutive WebDAV requests of the same client 
 - Fix for bug 29641: Supply one 'supported-calendar-component-set' inside 'supported-calendar-component-sets' for each supported component

* 2013-11-05 - thorben.betten@open-xchange.com

 - Fix for bug 29649: Check needed service for not null
 - Fix for bug 29650: Avoid possible NPE when resolving a folder storage by a Content-Type identifier
 - Fix for bug 29651: Added null guard when accessing possibly absent service
 - Fix for bug 29653: Added null guard when accessing possibly absent service
 - Fix for bug 29654: Added null guard when accessing possibly absent service
 - Fix for bug 29660: Handle OXException's that do not have a category assigned
 - Fix for bug 29666: User proper default charset when URL-encoding publication's site name
 - Fix for bug 29656: Check for possibly absent count Integer instance

* 2013-11-04 - jan.bauerdick@open-xchange.com

 - Fix for bug 29652: Added NPE check

* 2013-11-04 - tobias.friedrich@open-xchange.com

 - Fix for bug 29628: Make 'validate_contact_email' available in config tree, so it becomes visible for JSlob mapping

* 2013-11-04 - thorben.betten@open-xchange.com

 - Fix for bug 27721: Improved parsing of an IMAP folder's capability to store user flags
 - Fix for bug 29631: Signal that read-write connection has been used for reading
 - Fix for bug 29633: Signal read-only access with used read-write connection if no manipulation was done
 - Fix for bug 29630: Return with "after reading" if an exception is thrown meanwhile
 - Fix for bug 29629: Signal read-only access with used read-write connection if no manipulation was done
 - Fix for bug 29621: Don't propagate OXException via RMI