@@ -27,6 +27,7 @@ Import-Package: com.hazelcast.config,
  com.openexchange.realtime.util,
  com.openexchange.server,
  com.openexchange.threadpool,
+ com.openexchange.timer,
  com.openexchange.tools.session,
  javax.management,
  org.apache.commons.logging,
