@@ -28,4 +28,4 @@ com.openexchange.hazelcast.configuration.map.name=rtResourceDirectory-2
 # automatically evicted from the map. Entry is touched if get, put or 
 # containsKey is called. Any integer between 0 and Integer.MAX_VALUE.
 # 0 means infinite. 
-com.openexchange.hazelcast.configuration.map.maxIdleSeconds=3600
+com.openexchange.hazelcast.configuration.map.maxIdleSeconds=86400
