@@ -1,3 +1,8 @@
+* 2013-11-11 - marc.arens@open-xchange.com
+
+ - Fix for bug 29724: Continue processing remaining Stanzas after finding protocol related Stanza type
+ - Fix for bug 29539: Refresh resources via set to prevent eviction
+ 
 * 2013-11-06 - thorben.betten@open-xchange.com
 
  - Fix for bug 29683: Create special "E-Mail attachments" InfoStore folder with private-only permissions
